--- a/admin/package.json
+++ b/admin/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "admin-on-rest": "^1.3.3",
+    "admin-on-rest": "1.3.4",
     "antd": "^3.1.1",
     "aor-language-chinese": "^1.0.5",
     "aor-summernote-input": "^1.0.0",
@@ -15,9 +15,9 @@
     "moment": "^2.20.0",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
-    "react-scripts": "1.1.2",
+    "react-scripts": "1.0.10",
     "react-select": "^1.1.0",
-    "react-tap-event-plugin": "^3.0.2",
+    "react-tap-event-plugin": "2.0.1",
     "redux-form-schema": "0.0.3"
   },
   "scripts": {
