--- a/deploy/srv/package.json
+++ b/deploy/srv/package.json
@@ -19,6 +19,7 @@
     "debug": "^3.1.0",
     "express": "^4.15.3",
     "formidable": "^1.1.1",
+    "isomorphic-fetch": "^2.2.1",
     "jpush-sdk": "^3.4.1",
     "jquery-file-upload-middleware": "^0.1.8",
     "jsonwebtoken": "^7.4.1",
