--- a/pcapp/package.json
+++ b/pcapp/package.json
@@ -36,6 +36,7 @@
     "lodash.includes": "^4.3.0",
     "lodash.map": "^4.6.0",
     "lodash.pull": "^4.1.0",
+    "lodash.set": "^4.3.2",
     "lodash.uniq": "^4.5.0",
     "normalizr": "^3.2.4",
     "object-assign": "4.1.1",
