--- a/pcapp/package.json
+++ b/pcapp/package.json
@@ -40,6 +40,7 @@
     "lodash.uniq": "^4.5.0",
     "normalizr": "^3.2.4",
     "object-assign": "4.1.1",
+    "paginate-array": "^2.0.0",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
