--- a/deploy/srv/package.json
+++ b/deploy/srv/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "MONGO_URL=mongodb://localhost/yachuang DEBUG=appsrv:* node --inspect index"
+    "start": "DEBUG=* MONGO_URL=mongodb://localhost/yachuang DEBUG=appsrv:* node --inspect index"
   },
   "author": "",
   "license": "ISC",
