--- a/deploy/srv/package.json
+++ b/deploy/srv/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "DEBUG=* MONGO_URL=mongodb://localhost/yachuang DEBUG=appsrv:* node --inspect index"
+    "start": "DEBUG=* MONGO_URL=mongodb://localhost/yachuang DEBUG=appsrv:* node index"
   },
   "author": "",
   "license": "ISC",
@@ -29,7 +29,7 @@
     "mongoose": "^4.11.1",
     "mongoose-paginate": "^5.0.3",
     "node-schedule": "^1.2.3",
-    "pubsub-js": "^1.5.8",
+    "pubsub-js": "^1.6.0",
     "redis": "^2.8.0",
     "request": "^2.81.0",
     "socket.io": "^2.0.3",
