--- a/admin/package.json
+++ b/admin/package.json
@@ -21,6 +21,7 @@
     "redux-form-schema": "0.0.3"
   },
   "scripts": {
+    "buildcp": "react-scripts build && cp -r build/. ../deploy/dist/admin && rm -R build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
