--- a/admin/package.json
+++ b/admin/package.json
@@ -2,6 +2,7 @@
   "name": "admin",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "admin-on-rest": "1.3.4",
     "antd": "^3.1.1",
