--- a/deploy/ycsrv.yml
+++ b/deploy/ycsrv.yml
@@ -15,6 +15,7 @@ services:
       - tcpport=50000
       - admindir=/dist/admin
       - apppcdir=/dist/pcapp
+      - logdir=/log
     network_mode: "host"
     ports:
        - "6012:6012"
