--- a/pcapp/package.json
+++ b/pcapp/package.json
@@ -54,6 +54,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
+    "react-to-print": "^1.0.16",
     "redux": "^3.7.2",
     "redux-act": "^1.5.1",
     "redux-form": "^7.2.1",
