--- a/pcapp/package.json
+++ b/pcapp/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "antd": "^3.1.6",
-    "antd-mobile": "^2.1.6",
+    "antd": "^3.5.4",
+    "antd-mobile": "^2.1.10",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
@@ -13,7 +13,7 @@
     "babel-loader": "7.1.2",
     "babel-preset-react-app": "^3.1.1",
     "babel-runtime": "6.26.0",
-    "bizcharts": "^3.1.3-beta.1",
+    "bizcharts": "^3.1.7",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.7",
@@ -40,28 +40,29 @@
     "lodash.uniq": "^4.5.0",
     "normalizr": "^3.2.4",
     "object-assign": "4.1.1",
-    "paginate-array": "^2.0.0",
+    "paginate-array": "^2.1.0",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "raf": "3.4.0",
-    "react": "^16.2.0",
-    "react-dev-utils": "^5.0.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.4.0",
+    "react-dev-utils": "^5.0.1",
+    "react-dom": "^16.4.0",
     "react-dynamic-swiper": "^1.1.2",
-    "react-mobile-datepicker": "^3.0.8",
-    "react-redux": "^5.0.6",
+    "react-mobile-datepicker": "^3.0.12",
+    "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
-    "react-to-print": "^1.0.16",
+    "react-to-print": "^1.0.17",
     "redux": "^3.7.2",
-    "redux-act": "^1.5.1",
-    "redux-form": "^7.2.1",
+    "redux-act": "^1.7.4",
+    "redux-form": "^7.3.0",
     "redux-saga": "^0.16.0",
     "redux-thunk": "^2.2.0",
-    "socket.io-client": "^2.0.4",
+    "socket.io-client": "^2.1.1",
     "style-loader": "0.19.0",
+    "styled-components": "^3.3.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
