1、服务端时间问题 2、设备状态问题

--- a/deploy/ycsrv.yml
+++ b/deploy/ycsrv.yml
@@ -6,6 +6,7 @@ services:
     command: node ./index.js
     working_dir: /app
     volumes:
+      - /etc/localtime:/etc/localtime:ro
       - ./srv:/app
       - ./dist:/dist
       - ./log:/log
