--- a/pcapp/package.json
+++ b/pcapp/package.json
@@ -68,7 +68,9 @@
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
-    "whatwg-fetch": "2.0.3"
+    "whatwg-fetch": "2.0.3",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2"
   },
   "scripts": {
     "buildcp": "node scripts/build.js && cp -r build/. ../deploy/dist/pcapp && rm -R build",
