--- a/pcapp/package.json
+++ b/pcapp/package.json
@@ -54,6 +54,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
+    "react-select": "^1.2.1",
     "react-to-print": "^1.0.17",
     "redux": "^3.7.2",
     "redux-act": "^1.7.4",
@@ -63,14 +64,14 @@
     "socket.io-client": "^2.1.1",
     "style-loader": "0.19.0",
     "styled-components": "^3.3.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
-    "whatwg-fetch": "2.0.3",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2"
+    "whatwg-fetch": "2.0.3"
   },
   "scripts": {
     "buildcp": "node scripts/build.js && cp -r build/. ../deploy/dist/pcapp && rm -R build",
